--- a/languages/simple-ajax-search.pot
+++ b/languages/simple-ajax-search.pot
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Simple Ajax Search 1.0.0\n"
 "Report-Msgid-Bugs-To: "
 "http://wordpress.org/support/plugin/simple-ajax-search\n"
-"POT-Creation-Date: 2018-06-16 08:01:20+00:00\n"
+"POT-Creation-Date: 2018-06-19 15:43:34+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,7 +27,7 @@ msgid "https://pablocianes.com"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "Easily create a dynamic ajax search engine for your content."
+msgid "Easily create a dynamic ajax search engine for your blog."
 msgstr ""
 
 #. Author of the plugin/theme
